--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,14 @@ description = "Dark Web Monitoring System"
 authors = [
     {name = "A91y", email = "ayush.agr254@gmail.com"},
 ]
-dependencies = []
+dependencies = [
+    "colorama>=0.4.6",
+    "pysocks>=1.7.1",
+    "requests>=2.31.0",
+    "stem>=1.8.2",
+    "fake-useragent>=1.4.0",
+    "bs4>=0.0.2",
+]
 requires-python = "==3.11.*"
 readme = "README.md"
 
