--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "stem>=1.8.2",
     "fake-useragent>=1.4.0",
     "bs4>=0.0.2",
+    "pyfiglet>=1.0.2",
 ]
 requires-python = "==3.11.*"
 readme = "README.md"
