--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ dependencies = [
     "fake-useragent>=1.4.0",
     "bs4>=0.0.2",
     "pyfiglet>=1.0.2",
+    "i2plib>=0.0.14",
+    "aiohttp-socks>=0.8.4",
 ]
 requires-python = "==3.11.*"
 readme = "README.md"
